test/visibility/import/edgeCases/multipleDef.good
multipleDef.chpl:2: error: symbol x is multiply defined
multipleDef.chpl:5: note: also defined here
